# fresnel-imaging

./: .gitignore  README.md  WORKFLOW.md  pd_joint_deconv.py  pyproject.toml
project/: README.md  WORKFLOW_PROJECT.md
project/assets/common/: cornell_box.blend  cornell_box.glb
project/assets/lenses/biconvex_a/: lens.glb  lens.gltf  metadata.json  scene.blend
project/assets/lenses/biconvex_b/: lens.glb  lens.gltf  metadata.json  scene.blend
project/assets/lenses/fresnel_a/: lens.glb  lens.gltf  metadata.json  scene.blend
project/assets/lenses/fresnel_b/: lens.gltf  metadata.json  scene.blend
project/assets/lenses/fresnel_c/: lens.gltf  metadata.json  scene.blend
project/assets/lenses/triplet_a/: lens.gltf  metadata.json
project/code/: generate_lens_assets.py  triplet_step4_extract_psf.py  triplet_step4_render.py  triplet_step56_calibrate_deconv.py  validate_project_assets.py
project/references/: sources.md
src/fresnel_imaging/: __init__.py  cli.py
src/fresnel_imaging/calibration/: __init__.py  alignment.py  distortion.py  pipeline.py  psf_estimation.py
src/fresnel_imaging/deconvolution/: __init__.py  fast_deconv.py  fast_deconv_yuv.py  metrics.py  pd_joint_deconv.py  solve_image.py  utils.py
src/fresnel_imaging/simulation/: __init__.py  fresnel_lens.py  lens_geometry.py  materials.py  psf_measurement.py  render.py  scene_setup.py
tests/: test_calibration.py  test_deconvolution.py  test_lens_geometry.py  test_render.py  test_simulation.py  test_simulation_init.py
tests/manual/: blender_check.py  blender_preview.py
(+2 files in other folders)
